@@ -180,6 +180,7 @@ public class EmergencyCallDomainSelector extends DomainSelectorBase
     private boolean mRequiresVoLteEnabled;
     private boolean mLtePreferredAfterNrFailure;
     private boolean mTryCsWhenPsFails;
+    private boolean mTryEpsFallback;
     private int mModemCount;
 
     /** Indicates whether this instance is deactivated. */
@@ -566,6 +567,7 @@ public class EmergencyCallDomainSelector extends DomainSelectorBase
                 onWwanNetworkTypeSelected(mCsNetworkType);
             }
         } else if (psAvailable) {
+            mTryEpsFallback = (mPsNetworkType == NGRAN) && isEpsFallbackAvailable();
             if (!mRequiresImsRegistration || isImsRegisteredWithVoiceCapability()) {
                 onWwanNetworkTypeSelected(mPsNetworkType);
             } else if (isDeactivatedSim()) {
@@ -574,6 +576,7 @@ public class EmergencyCallDomainSelector extends DomainSelectorBase
             } else {
                 // Carrier configuration requires IMS registration for emergency services over PS,
                 // but not registered. Try CS emergency call.
+                mTryEpsFallback = false;
                 requestScan(true, true);
             }
         } else if (csAvailable) {
@@ -585,6 +588,7 @@ public class EmergencyCallDomainSelector extends DomainSelectorBase
                 // but not registered. Try CS emergency call.
                 requestScan(true, true);
             } else {
+                mTryEpsFallback = isEpsFallbackAvailable();
                 requestScan(true);
             }
         }
@@ -622,7 +626,10 @@ public class EmergencyCallDomainSelector extends DomainSelectorBase
 
         mCancelSignal = new CancellationSignal();
         // In case dialing over Wi-Fi has failed, do not the change the domain preference.
-        if (!wifiFailed) mLastPreferredNetworks = getNextPreferredNetworks(csPreferred);
+        if (!wifiFailed) {
+            mLastPreferredNetworks = getNextPreferredNetworks(csPreferred, mTryEpsFallback);
+        }
+        mTryEpsFallback = false;
 
         if (isInRoaming()
                 && (mPreferredNetworkScanType == DomainSelectionService.SCAN_TYPE_FULL_SERVICE)) {
@@ -654,10 +661,12 @@ public class EmergencyCallDomainSelector extends DomainSelectorBase
      * Gets the list of preferred network type for the new scan request.
      *
      * @param csPreferred Indicates whether CS preferred scan is requested.
+     * @param tryEpsFallback Indicates whether scan requested for EPS fallback.
      * @return The list of preferred network types.
      */
     @VisibleForTesting
-    public @RadioAccessNetworkType List<Integer> getNextPreferredNetworks(boolean csPreferred) {
+    public @RadioAccessNetworkType List<Integer> getNextPreferredNetworks(boolean csPreferred,
+            boolean tryEpsFallback) {
         if (mRequiresVoLteEnabled && !isAdvancedCallingSettingEnabled()) {
             // Emergency call over IMS is not supported.
             logi("getNextPreferredNetworks VoLte setting is not enabled.");
@@ -670,10 +679,10 @@ public class EmergencyCallDomainSelector extends DomainSelectorBase
         int psPriority = domains.indexOf(DOMAIN_PS_3GPP);
         int csPriority = domains.indexOf(DOMAIN_CS);
         logi("getNextPreferredNetworks psPriority=" + psPriority + ", csPriority=" + csPriority
-                + ", csPreferred=" + csPreferred
+                + ", csPreferred=" + csPreferred + ", epsFallback=" + tryEpsFallback
                 + ", lastNetworkType=" + accessNetworkTypeToString(mLastNetworkType));
 
-        if (!csPreferred && mLastNetworkType == UNKNOWN) {
+        if (!csPreferred && (mLastNetworkType == UNKNOWN || tryEpsFallback)) {
             // Generate the list per the domain preference.
 
             if (psPriority == NOT_SUPPORTED && csPriority == NOT_SUPPORTED) {
@@ -695,11 +704,17 @@ public class EmergencyCallDomainSelector extends DomainSelectorBase
                 preferredNetworks = generatePreferredNetworks(getCsNetworkTypeConfiguration(),
                         getImsNetworkTypeConfiguration());
             }
+
+            // Make NGRAN have the lowest priority
+            if (tryEpsFallback && preferredNetworks.contains(NGRAN)) {
+                preferredNetworks.remove(Integer.valueOf(NGRAN));
+                preferredNetworks.add(NGRAN);
+            }
         } else if (csPreferred || mLastNetworkType == EUTRAN || mLastNetworkType == NGRAN) {
             if (!csPreferred && mLastNetworkType == NGRAN && mLtePreferredAfterNrFailure) {
                 // LTE is preferred after dialing over NR failed.
                 List<Integer> imsRats = getImsNetworkTypeConfiguration();
-                imsRats.remove(new Integer(NGRAN));
+                imsRats.remove(Integer.valueOf(NGRAN));
                 preferredNetworks = generatePreferredNetworks(imsRats,
                         getCsNetworkTypeConfiguration());
             } else  if (csPriority > NOT_SUPPORTED) {
@@ -868,6 +883,17 @@ public class EmergencyCallDomainSelector extends DomainSelectorBase
         }
 
         return UNKNOWN;
+    }
+
+    private boolean isEpsFallbackAvailable() {
+        EmergencyRegResult regResult = mSelectionAttributes.getEmergencyRegResult();
+        if (regResult == null) return false;
+
+        List<Integer> ratList = getImsNetworkTypeConfiguration();
+        if (ratList.contains(EUTRAN)) {
+            return (regResult.getNwProvidedEmf() > 0);
+        }
+        return false;
     }
 
     /**
